--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 :root {
   --background: #ffffff;
   --foreground: #000000;
-  
+
   /* "Lunaria" Warm Brown / Bronze */
   --secondary: #5C4D44;
   --secondary-foreground: #ffffff;
@@ -22,7 +22,7 @@
   :root {
     --background: #121212;
     --foreground: #ffffff;
-    
+
     --secondary: #5C4D44;
     --secondary-foreground: #ffffff;
 
@@ -40,7 +40,8 @@ body {
 }
 
 /* Lenis Smooth Scroll Recommended CSS */
-html.lenis, html.lenis body {
+html.lenis,
+html.lenis body {
   height: auto;
 }
 
@@ -56,6 +57,34 @@ html.lenis, html.lenis body {
   overflow: hidden;
 }
 
+
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
+}
+
+/* Custom Scrollbar for Modal */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+}
+
+.custom-scrollbar:hover::-webkit-scrollbar-thumb {
+  background-color: color-mix(in srgb, var(--foreground), transparent 80%);
+}
+
+.dark .custom-scrollbar:hover::-webkit-scrollbar-thumb {
+  background-color: color-mix(in srgb, var(--foreground), transparent 80%);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: var(--secondary);
 }
